--- a/BlazorApp/Components/Layout/ProfileMenu.razor
+++ b/BlazorApp/Components/Layout/ProfileMenu.razor
@@ -1,6 +1,6 @@
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">BlazorApp</a>
+        <a class="navbar-brand" href="">Mat Matchmaker</a>
     </div>
 </div>
 
@@ -28,6 +28,11 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="test">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Test Page
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Roster">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> My Roster
             </NavLink>
         </div>
     </nav>
