--- a/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/Components/Layout/NavMenu.razor
@@ -27,7 +27,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="test">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Test Page
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Sign Up
             </NavLink>
         </div>
     </nav>
