--- a/BlazorApp/Components/Layout/ProfileMenu.razor
+++ b/BlazorApp/Components/Layout/ProfileMenu.razor
@@ -35,5 +35,10 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> My Roster
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="SignUp">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Sign Up
+            </NavLink>
+        </div>
     </nav>
 </div>
