--- a/BlazorApp/Components/Layout/ProfileMenu.razor
+++ b/BlazorApp/Components/Layout/ProfileMenu.razor
@@ -35,5 +35,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> My Roster
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="event">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Create an Event
+            </NavLink>
+        </div>
     </nav>
 </div>
