--- a/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/Components/Layout/NavMenu.razor
@@ -9,25 +9,42 @@
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="Home" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="Roster">
+                <span class="bi bi-table-icon" aria-hidden="true"></span> Roster
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="#">
+                        <span class="bi bi-calendar-icon" aria-hidden="true"></span> Events
+                    </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Event">
+                <span class="bi bi-calendar-icon" aria-hidden="true"></span> Create Event
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="SignUp">
+                <span class="bi bi-info-icon" aria-hidden="true"></span> Sign Up
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="test">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Sign Up
+                    <NavLink class="nav-link" href="#">
+                        <span class="bi bi-info-icon" aria-hidden="true"></span> About
+                    </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="#">
+                <span class="bi bi-mailbox-icon" aria-hidden="true"></span> Contact Us
             </NavLink>
         </div>
     </nav>
