--- a/BlazorApp/Components/Layout/MainLayout.razor
+++ b/BlazorApp/Components/Layout/MainLayout.razor
@@ -4,12 +4,21 @@
     <div class="sidebar">
         <NavMenu />
     </div>
-    
-    
+
+
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <Dropdown>
+                <DropdownToggleButton Color="ButtonColor.Secondary">
+                    <Icon Name="IconName.PersonCircle" style="margin-right: 5px;" />Profile
+                </DropdownToggleButton>
+                <DropdownMenu style="">
+                    <DropdownItem To="/roster" Type="ButtonType.Link">Manage Roster</DropdownItem>
+                    <DropdownItem To="#" Type="ButtonType.Link">Settings</DropdownItem>
+                    <DropdownItem To="#" Type="ButtonType.Link">Log Out</DropdownItem>
+                </DropdownMenu>
+            </Dropdown>
         </div>
 
         <article class="content px-4">
