--- a/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/Components/Layout/NavMenu.razor
@@ -20,9 +20,9 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="#">
-                        <span class="bi bi-calendar-icon" aria-hidden="true"></span> Events
-                    </NavLink>
+            <NavLink class="nav-link" href="#">
+                <span class="bi bi-calendar-icon" aria-hidden="true"></span> Events
+            </NavLink>
         </div>
 
         <div class="nav-item px-3">
@@ -37,9 +37,14 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="#">
-                        <span class="bi bi-info-icon" aria-hidden="true"></span> About
-                    </NavLink>
+            <NavLink class="nav-link" href="Login">
+                <span class="bi bi-info-icon" aria-hidden="true"></span> login
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="#">
+                <span class="bi bi-info-icon" aria-hidden="true"></span> About
+            </NavLink>
         </div>
 
         <div class="nav-item px-3">
