replicated nicks database project format, updated roster page, added input-SignUp class to App.css

--- a/BlazorApp/Components/Pages/Roster.razor
+++ b/BlazorApp/Components/Pages/Roster.razor
@@ -48,7 +48,7 @@
                 }
             }
             <tr id="addRow" style="@displayMode">
-                <td><input id="lastName" @bind="lastName" type="text" /></td>
+                <td><input class="input-SignUp" id="lastName" @bind="lastName" type="text" /></td>
                 <td><input id="firstName" type="text" @bind="firstName" /></td>
                 <td><input id="skill" type="text" @bind="skill"/> </td>
                 <td><input id="grade" type="text" @bind="grade"></td>
