--- a/BlazorApp/wwwroot/app.css
+++ b/BlazorApp/wwwroot/app.css
@@ -37,6 +37,13 @@ a, .btn-link {
 
 }
 
+.input-SignUp {
+    width: 250px; /* Adjust width as needed */
+    border: solid;
+    border-radius: 50px;
+    border-color: rgb(183, 183, 183);
+}
+
 
 .content {
     padding-top: 1.1rem;
