--- a/BlazorApp/Components/Layout/MainLayout.razor.css
+++ b/BlazorApp/Components/Layout/MainLayout.razor.css
@@ -21,7 +21,8 @@ main {
 }
 
 .top-row {
-    background-color: #f7f7f7;
+    /*background-color: #f7f7f7;*/
+    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #040d32 70%);
     border-bottom: 1px solid #d6d5d5;
     justify-content: flex-end;
     height: 3.5rem;
