--- a/BlazorApp/Components/Pages/Roster.razor.css
+++ b/BlazorApp/Components/Pages/Roster.razor.css
@@ -1,7 +1,49 @@
 .main-title{
-    background-image: linear-gradient(blue, darkblue);
+    /* background-image: linear-gradient(#063970, #010e1b); */
+    color: #063970;
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent; /* Makes the text itself transparent, showing the background */
     display: inline-block;
+    
+    
+}
+
+.table{
+    border-color: rgb(227,227,227);
+    border: 2px solid;
+    box-shadow: 2px 2px 30px lightgray;
+    text-align-all: center;
+    font-size: 1.2rem;
+    
+    
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+th:first-child{
+    border-top-left-radius: 15px;
+    
+}
+th:last-child{
+    border-top-right-radius: 15px;
+    border-bottom: none;
+}
+
+td:last-child{
+    width: auto;
+    border-bottom-left-radius: 15px;
+}
+
+
+
+
+.input-2{
+    width: auto; /* Adjust width as needed */
+    border: solid;
+    border-radius: 50px;
+    border-color: rgb(183, 183, 183);
+    
 }
