--- a/BlazorApp/Components/Layout/MainLayout.razor
+++ b/BlazorApp/Components/Layout/MainLayout.razor
@@ -10,10 +10,11 @@
     <main>
         <div class="top-row px-4">
             <Dropdown>
-                <DropdownToggleButton Color="ButtonColor.Secondary">
+                <DropdownToggleButton Color="ButtonColor.Primary">
                     <Icon Name="IconName.PersonCircle" style="margin-right: 5px;" />Profile
                 </DropdownToggleButton>
                 <DropdownMenu style="">
+                    <DropdownItem To="/dashboard" Type="ButtonType.Link">Dashboard</DropdownItem>
                     <DropdownItem To="/roster" Type="ButtonType.Link">Manage Roster</DropdownItem>
                     <DropdownItem To="#" Type="ButtonType.Link">Settings</DropdownItem>
                     <DropdownItem To="#" Type="ButtonType.Link">Log Out</DropdownItem>
