--- a/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/Components/Layout/NavMenu.razor
@@ -20,7 +20,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Events">
+            <NavLink class="nav-link" href="#">
                 <span class="bi bi-calendar-icon" aria-hidden="true"></span> Events
             </NavLink>
         </div>
