--- a/BlazorApp/Components/Pages/Home.razor
+++ b/BlazorApp/Components/Pages/Home.razor
@@ -2,6 +2,6 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>MatMatchMaker</h1>
+<h1>Mat Matchmaker</h1>
 
-Welcome to your new app.
+<p>Welcome to your new app.</p>
