landing page added

--- a/BlazorApp/Components/Layout/HeaderLayout.razor
+++ b/BlazorApp/Components/Layout/HeaderLayout.razor
@@ -3,7 +3,7 @@
 <div class="page">
     <main>
         <div class="top-row px-4">
-            <NavLink href="/" style="color: white;">Back to Home</NavLink>
+            <NavLink href="Home" style="color: white;">Back to Home</NavLink>
             <h1 class="title">Mat Matchmaker</h1>
             <Dropdown>
                 <DropdownToggleButton Color="ButtonColor.Primary">
