--- a/BlazorApp/Components/Pages/Dashboard.razor
+++ b/BlazorApp/Components/Pages/Dashboard.razor
@@ -32,7 +32,7 @@
 
                     <div class="nav-item px-3">
                         <NavLink class="nav-link" href="#">
-                            <span class="bi bi-mailbox-icon" aria-hidden="true"></span> Message a Coach
+                            <span class="bi bi-chat-icon" aria-hidden="true"></span> Message a Coach
                         </NavLink>
                     </div>
                 </nav>
