--- a/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/Components/Layout/NavMenu.razor
@@ -52,6 +52,11 @@
                 <span class="bi bi-mailbox-icon" aria-hidden="true"></span> Contact Us
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="Test">
+                        <span class="bi bi-mailbox-icon" aria-hidden="true"></span> Test
+                    </NavLink>
+                </div>
     </nav>
 </div>
 
