dashboard, landing page, event calendar

--- a/BlazorApp/Components/Layout/MainLayout.razor
+++ b/BlazorApp/Components/Layout/MainLayout.razor
@@ -14,6 +14,7 @@
                     <Icon Name="IconName.PersonCircle" style="margin-right: 5px;" />Profile
                 </DropdownToggleButton>
                 <DropdownMenu style="">
+                    <DropdownItem To="/dashboard" Type="ButtonType.Link">Dashboard</DropdownItem>
                     <DropdownItem To="/roster" Type="ButtonType.Link">Manage Roster</DropdownItem>
                     <DropdownItem To="#" Type="ButtonType.Link">Settings</DropdownItem>
                     <DropdownItem To="#" Type="ButtonType.Link">Log Out</DropdownItem>
