--- a/BlazorApp/wwwroot/app.css
+++ b/BlazorApp/wwwroot/app.css
@@ -3,15 +3,15 @@ html, body {
 }
 
 a, .btn-link {
-    color: #006bb7;
+    color: #D6553E;
 }
 
 .btn-primary {
     color: #fff;
-    background-image: linear-gradient(rgb(0, 73, 132), rgb(0, 30, 77));
-    /*background-color: #1b6ec2;
-    border-color: #1861ac;
-    */
+    background-image: linear-gradient(#0E88AE, #033C4F);
+    border: none;
+    
+    
 }
 
 .btn-primary:hover{
@@ -20,7 +20,7 @@ a, .btn-link {
 
 .btn-secondary {
     /*background-image: linear-gradient(to bottom right, rgb(0, 98, 179), rgb(1, 42, 107));*/
-    color:#006bb7;
+    color:#D6553E;
     background-color: transparent;
     border: none;
 
@@ -56,7 +56,7 @@ h1:focus {
 */
 
 h1{
-    background-image: linear-gradient(rgb(0, 46, 137), rgb(0, 21, 90));
+    background-image: linear-gradient(#0E88AE, #033C4F);
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent; /* Makes the text itself transparent, showing the background */
