--- a/BlazorApp/Components/Pages/Home.razor
+++ b/BlazorApp/Components/Pages/Home.razor
@@ -1,7 +1,7 @@
-﻿@page "/Home"
+﻿@page "/"
 
 <PageTitle>Home</PageTitle>
 
-<h1>Mat Matchmaker</h1>
+<h1>MatMatchMaker</h1>
 
-<p>Welcome to your new app.</p>
+Welcome to your new app.
